<resources>
    <string name="app_name">Day1</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="textview">Material is an adaptable system of guidelines, components, and tools that support the best practices of user interface design. Backed by open-source code, Material streamlines collaboration between designers and developers, and helps teams quickly build beautiful products. </string>
    <string name="yellow_screen">Yellow Activity</string>
    <string name="label_1">Radio Button1</string>
    <string name="label_2">Radio Button 2</string>
    <string name="label_3">Radio Button 3</string>
    <string name="label_4">Radio Button 4</string>
    <string name="label_5">Radio Button 5</string>
    <string name="check_box1">CheckBox 1</string>
    <string name="check_box2">CheckBox 2</string>
    <string name="check_box3">CheckBox 3</string>
    <string name="check_box4">CheckBox 4</string>
    <string name="check_box5">CheckBox 5</string>
    <string name="Click_me">Click Me</string>
    <string name="ListOfButtons">List</string>
    <string name="check_now">Check Now</string>
    <string name="Buttons">Buttons</string>
    <string name="textButton">Text Button</string>
    <string name="elevated">Elevated</string>
    <string name="outline">OutlineButton</string>
    <string name="contained">Contained button</string>
    <string name="MainText">Text View</string>
    <string name="text">The Acidic nature of Vinegar is due to the presence of, The Acidic nature of Vinegar is due to the presence of:</string>
    <string name="text_date">Mon, 2 May</string>
    <string name="market">Market your growth strategy</string>
    <string name="getstarted">Get started</string>
    <string name="white_screen">Learn more about plants</string>
    <string name="white">White Activity</string>
    <string name="quotes">Read how to care for plants in our guide</string>
    <string name="textview1">TextView</string>
    <string name="Day1">Day 1</string>
    <string name="skip">Skip</string>
    <string name="hint_name">Name</string>
    <string name="text_activity">Text Activity</string>
    <string name="content_description_end_icon">Type Your Name</string>
    <string name="cardpayment">Card Payment</string>
    <string name="hint_cardnumber">Card number</string>
    <string name="expiry">Expiry date</string>
    <string name="cvv">CVC/CVV</string>
    <string name="card_name">Cardholder name</string>
    <string name="billing">Billing address</string>
    <string name="address1">Address line1</string>
    <string name="address2">Address line  2</string>
    <string name="saveCard">Save Card</string>
    <string name="login">Login</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="or">Or, login with</string>
    <string name="password_creation">Create new password</string>
    <string name="password_summary">Your new password must be different from previous used passwords.</string>
    <string name="password_check">Must be at least 8 characters.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_activity">Login Activity</string>
    <string name="Forgot" />
    <string name="forgot">Forgot?</string>
    <string name="register_guidelines">New to iThinckLogistics? </string>
    <string name="register"> Register</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="reset_password">Resert Password</string>
    <string name="password_min_error">Password must be greater than 8 characters</string>
    <string name="mobile">Number Verification</string>
    <string name="mobile_verification">We will send you  an One Time  Password on this mobile number</string>
    <string name="mobile_button">Mobile Button</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="get_otp">Get Otp</string>
    <string name="otpverification">OTP Versification</string>
    <string name="verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="otp_number">"Enter the OTP sent to "</string>
    <string name="otp_receive">Dont receice the OTP ?</string>
    <string name="otp_resend">RESEND OTP</string>
    <string name="enternumber">Enter First Number</string>
    <string name="enternumber1">Enter First Number</string>
    <string name="enternumber2">Enter Second Number</string>
    <string name="sumof">The total of the %d + %d = %d</string>
    <string name="subof">The substraction of the %d - %d = %d</string>
    <string name="smallnumber">Number 1 is smaller than Number2</string>
    <string name="hint_income_type">Income Type</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="page_title">Android Practise</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Click here to add item to favorites</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="delete">delete</string>
</resources>