<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/page_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <Button
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_box"
                app:layout_constraintTop_toBottomOf="@id/radioButton" />

            <Button
                android:id="@+id/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MainText"
                app:layout_constraintTop_toBottomOf="@id/checkbox" />

            <Button
                android:id="@+id/yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow_screen"
                app:layout_constraintTop_toBottomOf="@id/TextView" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Buttons"
                app:layout_constraintTop_toBottomOf="@id/yellow" />

            <Button
                android:id="@+id/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/white"
                app:layout_constraintTop_toBottomOf="@id/button" />

            <Button
                android:id="@+id/text_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_activity"
                app:layout_constraintTop_toBottomOf="@id/white" />

            <Button
                android:id="@+id/card_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardpayment"
                app:layout_constraintTop_toBottomOf="@id/text_activity" />

            <Button
                android:id="@+id/loginAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/card_payment" />

            <Button
                android:id="@+id/passwordcreatinon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_activity"
                app:layout_constraintTop_toBottomOf="@id/loginAccount" />

            <Button
                android:id="@+id/mobile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_button"
                app:layout_constraintTop_toBottomOf="@id/passwordcreatinon" />

            <Button
                android:id="@+id/sumsub_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SUM and SUB"
                app:layout_constraintTop_toBottomOf="@id/mobile_button" />

            <Button
                android:id="@+id/senddata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Data"
                app:layout_constraintTop_toBottomOf="@id/sumsub_button" />

            <Button
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Card View"
                app:layout_constraintTop_toBottomOf="@id/senddata" />

            <Button
                android:id="@+id/menu_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Toolbar Menus"
                app:layout_constraintTop_toBottomOf="@id/card_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>