<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/activity_default_padding"
    tools:context=".PasswordActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_creation"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/password_summary"
        android:textColor="@color/cream"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/password1_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/password1_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_check"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/password1_layout"
        app:layout_constraintTop_toBottomOf="@id/password1_layout" />

    <TextView
        android:id="@+id/passwordconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:text="@string/password_confirm"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/password_rules" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordconfirm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_rules1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_check"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/password2_layout"
        app:layout_constraintTop_toBottomOf="@id/password2_layout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:layout_constraintTop_toBottomOf="@id/password_rules1"
        android:layout_marginTop="@dimen/activity_default_padding"
        app:cornerRadius="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>