<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_default_padding"
    android:padding="@dimen/activity_default_padding"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageman"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_baseline_accessibility_new_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageman" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/forgot"
        android:textColor="#0065FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding25"
        android:text="@string/login"
        app:cornerRadius="90dp"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/login_icon" />

    <ImageView
        android:id="@+id/smile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/activity_default_padding"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:layout_marginRight="@dimen/activity_default_padding"
        android:src="@drawable/ic_baseline_insert_emoticon_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/words" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/activity_default_padding"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/smile"
        app:layout_constraintEnd_toStartOf="@id/smile" />

    <ImageView
        android:id="@+id/rabbit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/activity_default_padding"
        android:src="@drawable/ic_baseline_cruelty_free_24"
        app:layout_constraintBottom_toBottomOf="@id/smile"
        app:layout_constraintStart_toEndOf="@id/smile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        app:layout_constraintStart_toStartOf="@id/smile"
        app:layout_constraintTop_toBottomOf="@id/rabbit" />

    <TextView
        android:id="@+id/register_gudileness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:text="@string/register_guidelines"
        app:layout_constraintStart_toStartOf="@id/circle"
        app:layout_constraintTop_toBottomOf="@id/smile" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_default_padding"
        android:text="@string/register"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:textColor="#0065FF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/register_gudileness"
        app:layout_constraintTop_toBottomOf="@id/smile" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

