<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".MobileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mobile"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_mobile_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mobile"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/mobile" />

        <TextView
            android:id="@+id/number_verify_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_default_padding"
            android:text="@string/mobile_verification"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/number_verification" />

        <TextView
            android:id="@+id/mobilelabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mobile_number"
            android:textSize="@dimen/padding25"
            app:layout_constraintTop_toBottomOf="@id/number_verify_description"
            android:layout_marginTop="@dimen/padding25"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            app:layout_constraintTop_toBottomOf="@id/mobilelabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_mobile_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="number"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/get_otp"
            app:cornerRadius="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
